// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment displays image attachments 1`] = `
<div
  data-stylename="comment"
>
  <div
    data-stylename="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      data-stylename="avatar"
      url="/c/foo/m/1"
    />
    <Link
      data-stylename="userName"
      to="/c/foo/m/1"
    >
      Joe Smith
    </Link>
    <div
      data-stylename="upperRight"
    >
      <span
        data-stylename="timestamp"
      >
        just now
      </span>
    </div>
  </div>
  <CardImageAttachments
    attachments={
      Array [
        Object {
          "attachmentType": "image",
          "url": "foo.png",
        },
      ]
    }
    data-stylename="images"
    linked={true}
  />
  <CardFileAttachments
    attachments={
      Array [
        Object {
          "attachmentType": "image",
          "url": "foo.png",
        },
      ]
    }
    data-stylename="files"
  />
  <Connect(ClickCatcher)>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>text of the comment</p>",
        }
      }
      data-stylename="text"
      id="text"
    />
  </Connect(ClickCatcher)>
</div>
`;

exports[`Comment displays the delete menu when deleteComment is defined 1`] = `
<div
  data-stylename="comment"
>
  <div
    data-stylename="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      data-stylename="avatar"
      url="/c/foo/m/1"
    />
    <Link
      data-stylename="userName"
      to="/c/foo/m/1"
    >
      Joe Smith
    </Link>
    <div
      data-stylename="upperRight"
    >
      <span
        data-stylename="timestamp"
      >
        just now
      </span>
      <Dropdown
        data-stylename="dropdown"
        items={
          Array [
            Object {
              "icon": "Trash",
              "label": "Delete",
              "onClick": [Function],
            },
          ]
        }
        toggleChildren={
          <Icon
            name="More"
          />
        }
      />
    </div>
  </div>
  <CardImageAttachments
    attachments={Array []}
    data-stylename="images"
    linked={true}
  />
  <CardFileAttachments
    attachments={Array []}
    data-stylename="files"
  />
  <Connect(ClickCatcher)>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>text of the comment</p>",
        }
      }
      data-stylename="text"
      id="text"
    />
  </Connect(ClickCatcher)>
</div>
`;

exports[`Comment displays the remove menu when removeComment is defined 1`] = `
<div
  data-stylename="comment"
>
  <div
    data-stylename="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      data-stylename="avatar"
      url="/c/foo/m/1"
    />
    <Link
      data-stylename="userName"
      to="/c/foo/m/1"
    >
      Joe Smith
    </Link>
    <div
      data-stylename="upperRight"
    >
      <span
        data-stylename="timestamp"
      >
        just now
      </span>
      <Dropdown
        data-stylename="dropdown"
        items={
          Array [
            Object {
              "icon": "Trash",
              "label": "Remove",
              "onClick": [Function],
            },
          ]
        }
        toggleChildren={
          <Icon
            name="More"
          />
        }
      />
    </div>
  </div>
  <CardImageAttachments
    attachments={Array []}
    data-stylename="images"
    linked={true}
  />
  <CardFileAttachments
    attachments={Array []}
    data-stylename="files"
  />
  <Connect(ClickCatcher)>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>text of the comment</p>",
        }
      }
      data-stylename="text"
      id="text"
    />
  </Connect(ClickCatcher)>
</div>
`;

exports[`Comment renders correctly 1`] = `
<div
  data-stylename="comment"
>
  <div
    data-stylename="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      data-stylename="avatar"
      url="/c/foo/m/1"
    />
    <Link
      data-stylename="userName"
      to="/c/foo/m/1"
    >
      Joe Smith
    </Link>
    <div
      data-stylename="upperRight"
    >
      <span
        data-stylename="timestamp"
      >
        just now
      </span>
    </div>
  </div>
  <CardImageAttachments
    attachments={Array []}
    data-stylename="images"
    linked={true}
  />
  <CardFileAttachments
    attachments={Array []}
    data-stylename="files"
  />
  <Connect(ClickCatcher)>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>text of the comment</p>",
        }
      }
      data-stylename="text"
      id="text"
    />
  </Connect(ClickCatcher)>
</div>
`;

exports[`Comment renders correctly when editing 1`] = `
<div
  data-stylename="comment"
>
  <div
    data-stylename="header"
  >
    <Avatar
      avatarUrl="foo.jpg"
      data-stylename="avatar"
      url="/c/foo/m/1"
    />
    <Link
      data-stylename="userName"
      to="/c/foo/m/1"
    >
      Joe Smith
    </Link>
    <div
      data-stylename="upperRight"
    >
      <span
        data-stylename="timestamp"
      >
        Editing now
      </span>
    </div>
  </div>
  <CardImageAttachments
    attachments={Array []}
    data-stylename="images"
    linked={true}
  />
  <CardFileAttachments
    attachments={Array []}
    data-stylename="files"
  />
  <Connect(ClickCatcher)>
    <Connect(HyloEditor)
      contentHTML="<p>text of the comment</p>"
      data-stylename="editor"
      parentComponent="CommentForm"
      submitOnReturnHandler={[Function]}
    />
  </Connect(ClickCatcher)>
</div>
`;
